Fixes layout issues in pipelines with splitter nodes

--- a/cdap-ui/app/directives/splitter-popover/splitter-popover.less
+++ b/cdap-ui/app/directives/splitter-popover/splitter-popover.less
@@ -16,28 +16,30 @@
 
 @import "../../styles/variables.less";
 
-.node {
-  .node-splitter-endpoint {
-    .my-splitter-popover {
-      z-index: 1;
-      min-width: 80px;
-      margin-top: -21px;
-      margin-left: 11px;
+.box {
+  .node {
+    .node-splitter-endpoint {
+      .my-splitter-popover {
+        z-index: 1;
+        min-width: 80px;
+        margin-top: -21px;
+        margin-left: 11px;
 
-      .popover-content {
-        padding: 10px;
-        color: @text-color;
+        .popover-content {
+          padding: 10px;
+          color: @text-color;
 
-        .port-name {
-          width: 65%;
-          display: inline-block;
-        }
+          .port-name {
+            width: 65%;
+            display: inline-block;
+          }
 
-        .endpoint-circle {
-          position: relative;
-          display: inline-flex;
-          top: -4px;
-          right: -20px;
+          .endpoint-circle {
+            position: relative;
+            display: inline-flex;
+            top: -4px;
+            right: -20px;
+          }
         }
       }
     }
